alignment fix

--- a/Assests/CSS/Style.CSS
+++ b/Assests/CSS/Style.CSS
@@ -22,13 +22,14 @@ z-index:-1;
     }
     #div1{
         background-color: #50c878;
-        width: 80%;
+        width:64%;
         margin-left: auto;
         margin-right: auto;
         padding: 2%;
-        text-align: center;
+        text-align: left;
         Margin-top: 5%;
         background-color: #277b44;
+        padding: 10%;
     }
 
     button{
